# AI-Trading-and-Market-Prediction

./: .gitignore  README.md  pyproject.toml
app/: pyproject.toml
app/models/xgboost/: TSLA_xgb_model.pkl
app/src/algo_trader/data/: data_collector.py
app/src/algo_trader/features/: feature_engineering.py
app/src/algo_trader/models/: xgboost_model.py
config/: features.yaml  labels.yaml  project.yaml
data/backtests/: AAPL_backtest.csv  AAPL_backtest.manifest.json  BTC-USD_backtest.csv  BTC-USD_backtest.manifest.json  MSFT_backtest.csv  MSFT_backtest.manifest.json  PORT_CORE_4_AAPL_TSLA_MSFT_BTC_USD_backtest.csv  PORT_CORE_4_AAPL_TSLA_MSFT_BTC_USD_backtest.manifest.json  TSLA_backtest.csv  TSLA_backtest.manifest.json
devnotes/: README.md  backtest_cli.md  collect_data.md  engineering_features.md  label_features.md  plot_backtest.md  train_models.md
models/xgboost/: AAPL_xgb_model.pkl  BTC-USD_xgb_model.pkl  MSFT_xgb_model.pkl  TSLA_xgb_model.pkl
reports/: backtest_summary.csv  backtest_summary.md
scripts/: run_pipeline.sh
src/algo_trader/: cli.py  execute_live.py  predict_next.py
src/algo_trader/backtest/: backtest_cli.py  full_report.py  multi_backtest_cli.py  plot_backtest.py
src/algo_trader/cli/: full_report.py  multi_full_report.py
src/algo_trader/data/: collect_data.py  data_collector.py
src/algo_trader/features/: engineering_features.py  feature_set.py  label_features.py  label_generator.py
src/algo_trader/live/: paper_trader.py
src/algo_trader/models/: train_model.py
src/algo_trader/plots/: _init_.py  base.py  drawdown.py  equity_curve.py  feature_importance.py  generate_report.py  rolling_sharpe.py  signal_heatmap.py  signal_heatmap_cli.py  test.py
src/algo_trader/reports/: backtest_summary.py
(+3 files in other folders)
