[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "kbains09",email = "kiratbains09@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.1,<3.0.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "yfinance (>=0.2.65,<0.3.0)",
    "ta (>=0.11.0,<0.12.0)",
    "statsmodels (>=0.14.5,<0.15.0)",
    "stable-baselines3 (>=2.7.0,<3.0.0)",
    "gym (>=0.26.2,<0.27.0)",
    "ta-lib (>=0.6.5,<0.7.0)",
    "xgboost (>=3.0.4,<4.0.0)",
    "joblib (>=1.5.1,<2.0.0)",
    "typer (>=0.16.0,<0.17.0)"
]

[tool.poetry]
packages = [{include = "app", from = "src"}]


[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
ipykernel = "^6.30.1"
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
